add new website from server na

--- a/xem-phim-bo/nghi-thuc-hoa-anh-dao/index.html
+++ b/xem-phim-bo/nghi-thuc-hoa-anh-dao/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1659,40 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-bo-phim-lon-len-cung-chung-ta-phan-3" title="Những bộ phim lớn lên cùng chúng ta (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/dam-me-chet-nguoi" title="Đam Mê Chết Người">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-bo-phim-lon-len-cung-chung-ta-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dam-me-chet-nguoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những bộ phim lớn lên cùng chúng ta (Phần 3)
+             Đam Mê Chết Người
             </span>
             <span class="list-top-movie-item-en">
-             The Movies That Made Us (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/than-thoai-2" title="Thần Thoại 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-thoai-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thần Thoại 2
-            </span>
-            <span class="list-top-movie-item-en">
-             A Legend
+             Killing Me Softly
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1703,21 +1681,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhan-vien-ban-thoi-gian-phuc-vu-khach-hang" title="Nhân viên bán thời gian phục vụ khách hàng">
+          <a class="list-top-movie-link" href="/phim-moi/chinh-phuc-trai-tim-em" title="Chinh Phục Trái Tim Em">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-vien-ban-thoi-gian-phuc-vu-khach-hang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chinh-phuc-trai-tim-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhân viên bán thời gian phục vụ khách hàng
+             Chinh Phục Trái Tim Em
             </span>
             <span class="list-top-movie-item-en">
-             고객위에옷벗는알바생
+             Art Ache
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1725,21 +1703,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phim-kinh-di-5" title="Phim Kinh Dị 5">
+          <a class="list-top-movie-link" href="/phim-moi/quy-lo-duong-ve-nha" title="Quy Lộ (Đường Về Nhà)">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phim-kinh-di-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quy-lo-duong-ve-nha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phim Kinh Dị 5
+             Quy Lộ (Đường Về Nhà)
             </span>
             <span class="list-top-movie-item-en">
-             Scary Movie V
+             ROAD HOME
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1747,21 +1725,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bang-dream-3" title="BanG Dream! 3">
+          <a class="list-top-movie-link" href="/phim-moi/vu-mat-tich-tai-ayotzinapa" title="Vụ mất tích tại Ayotzinapa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bang-dream-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-mat-tich-tai-ayotzinapa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             BanG Dream! 3
+             Vụ mất tích tại Ayotzinapa
             </span>
             <span class="list-top-movie-item-en">
-             BanG Dream! Season 3
+             The 43
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/giong-noi-2" title="Giọng Nói 2">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giong-noi-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giọng Nói 2
+            </span>
+            <span class="list-top-movie-item-en">
+             Voice 2
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
